Pass params to WorkflowSteps
Signed-off-by: Daniel Widdis <widdis@gmail.com>